Internal css style reference for 403.html testing

--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,11 @@
 # Forbid Indexing
 Options -Indexes
 
+# Auto Add UTF-8
+<FilesMatch "\.(htm|html|php|asp|css|js)$">
+AddDefaultCharset UTF-8
+</FilesMatch>
+
 # HTTPS 
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
